namespace SFunctionHybrid.Framework.Declarations
{
    public class OutputDeclaration : Declaration
    {
        public OutputDeclaration(string name) : base(name)
        {

        }
    }
}
